MEM-148: Fix YouTube login button wrapping

--- a/apps/memspace-web/src/components/YouTubeLoginButton/YouTubeLoginButton.module.css
+++ b/apps/memspace-web/src/components/YouTubeLoginButton/YouTubeLoginButton.module.css
@@ -12,7 +12,10 @@
   color: white;
 }
 
+.label {
+  margin-right: 0.4rem;
+}
+
 .logo {
-  margin-left: 0.4rem;
   height: 25px;
 }
